<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="Program Modes">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_focus"
                    android:title="@string/focus" />
                <item
                    android:id="@+id/nav_relax"
                    android:title="@string/relax" />
                <item
                    android:id="@+id/nav_memory_graph"
                    android:title="@string/mem_graph" />

            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_data_logger"
        android:title="@string/logged_data" />

    <item
        android:id="@+id/nav_connect_device"
        android:title="@string/connect_device" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings" />

    <item android:title="@string/other_head_nav_drawer">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_nav_drawer" />

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
