<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="3"
        android:key="@string/samples_pref_key"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:numeric="integer"
        android:title="@string/samples_pref_label" 
        android:summary="3"/>
    <EditTextPreference
        android:defaultValue="4"
        android:key="@string/bins_pref_key"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:numeric="integer"
        android:title="@string/bins_pref_label"
        android:summary="4"/>
    <EditTextPreference
        android:defaultValue="2"
        android:key="@string/num_channels_pref_key"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:numeric="integer"
        android:title="@string/num_channels_pref_label" 
        android:summary="2"/>
    
</PreferenceScreen>
