<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_change_theme"
        android:icon="@drawable/ic_crescent_moon"
        android:title="@string/change_theme"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:title="@string/about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback_settings"
        android:orderInCategory="200"
        android:title="@string/feedback_settings_title"
        app:showAsAction="never" />
</menu>
