<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.network.OSCReceiverFragment">

    <LinearLayout
        android:id="@+id/listenerTextList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/statuslabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/about_text_padding"
            tools:text="@string/statusLabel" />

        <ListView
            android:id="@+id/messageOutputTextList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ipField"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:hint="@string/ipField"
                android:padding="@dimen/about_text_padding" />

            <EditText
                android:id="@+id/portField"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:hint="@string/portField"
                android:padding="@dimen/about_text_padding" />
        </LinearLayout>

        <Button
            android:id="@+id/forwardButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/forward" />
    </LinearLayout>
</FrameLayout>